<resources>
    <string name="app_name">News</string>
    <string name="news">News</string>
    <string name="title_culture">Culture</string>
    <string name="title_business">Business</string>
    <string name="title_fashion">Fashion</string>
    <string name="title_society">Society</string>
    <string name="title_environment">Environment</string>
    <string name="title_sport">Sports</string>
    <string name="title_science">Science</string>
    <string name="title_world">World</string>
    <string name="title_home">Home</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_entertainment">Entertainment</string>
    <string name="title_technology">Technology</string>
    <string name="title_health">Health</string>
    <string name="updated_just_now">updated just now</string>
    <string name="title_settings">Settings</string>
    <string name="search">Search</string>
    <string name="sortby">Sort By</string>
    <string name="language">Language</string>
    <string name="search_news">Search News</string>
    <string name="eng">English</string>


</resources>