<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/nav_science"
        android:icon="@drawable/atom"
        android:title="@string/title_science" />
    <item
        android:id="@+id/nav_sport"
        android:icon="@drawable/sport"
        android:title="@string/title_sport" />
    <item
        android:id="@+id/nav_entertainment"
        android:icon="@drawable/video"
        android:title="@string/title_entertainment" />

    <item
        android:id="@+id/nav_business"
        android:icon="@drawable/briefcase"
        android:title="@string/title_business" />
    <item
        android:id="@+id/nav_technology"
        android:icon="@drawable/innovation"
        android:title="@string/title_technology"/>
    <item
        android:id="@+id/nav_health"
        android:icon="@drawable/heartbeat"
        android:title="@string/title_health"/>


</menu>